[package]
name = "giga_grabber"
version = "1.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "fs", "io-util", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["socks", "json", "stream", "rustls"] }
fastrand = "2"
futures = "0.3"
tokio-util = "0.7"
iced = { version = "0.14.0", features = ["tokio", "canvas", "svg", "advanced"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
num-traits = "0.2"
native-dialog = "0.7"
base64 = "*"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ctr = "0.9"
cipher = "0.4"
url = "2"
anyhow = "1"
kanal = "0.1"
log = "0.4"
simple-logging = "2"
log-panics = "2"
indicatif = "0.18"
lyon_algorithms = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
