[package]
name = "giga_grabber"
version = "1.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
anyhow = "1"
base64 = "*"
cbc = { version = "0.1", features = ["alloc"] }
cipher = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctr = "0.9"
fastrand = "2"
futures = "0.3"
iced = { version = "0.14.0", optional = true, features = ["tokio", "canvas", "svg", "advanced"] }
indicatif = "0.18"
kanal = "0.1"
log = "0.4"
log-panics = "2"
native-dialog = { version = "0.7", optional = true }
num-traits = "0.2"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["socks", "json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-logging = "2"
tokio = { version = "1", default-features = false, features = ["sync", "fs", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
url = "2"

[features]
default = ["gui"]
gui = ["dep:iced", "dep:native-dialog"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
