[package]
name = "mega"
version = "0.4.0"
edition = "2021"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "A client API library for interacting with MEGA"
repository = "https://github.com/Hirevo/mega-rs"
documentation = "https://docs.rs/mega"
keywords = ["protocol", "api", "mega", "web"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"

[dependencies]
# (De)serialization
json = { version = "1.0.93", package = "serde_json" }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
serde_repr = "0.1.10"
base64 = "0.21.0"

# Async helpers
async-trait = "0.1.64"
futures = "0.3.28"
sluice = "0.5.5"

# Error handling
thiserror = "1.0.38"

# Miscellaneous
url = "2.3.1"
rand = "0.8.5"
chrono = "0.4.23"
dyn-clone = "1.0.11"

# Cryptography
aes = "0.8.2"
cbc = "0.1.2"
ctr = "0.9.2"
rsa = "0.8.1"
cipher = { version = "0.4.3", features = ["block-padding"] }
pbkdf2 = { version = "0.11.0", features = ["std"] }

# `reqwest` support
reqwest = { version = "0.11.14", features = ["json", "stream"], optional = true }
tokio = { version = "1.25.0", features = ["time"], optional = true }
tokio-util = { version = "0.7.7", features = ["compat", "codec"], optional = true }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest", "dep:tokio", "dep:tokio-util"]

[dev-dependencies]
async-read-progress = "0.2.0"
console = "0.15.5"
hex = "0.4.3"
indicatif = "0.17.3"
sha2 = "0.10.6"
text_trees = "0.1.2"
tokio = { version = "1.25.0", features = ["macros"] }
